@@ -12,8 +12,7 @@ extern crate assert_matches;
 mod support;
 use support::{list_test_devices, test_name, test_uuid};
 
-use devicemapper::DmIoctlCmd as dmi;
-use devicemapper::{DevId, DmError, DmFlags, DM};
+use devicemapper::{DevId, DmError, DmFlags, DmIoctlCmd, DM};
 
 #[test]
 /// Test that some version can be obtained.
@@ -100,7 +99,7 @@ fn sudo_test_rename_uuid() {
 
     assert_matches!(
         dm.device_rename(&name, &DevId::Uuid(&new_uuid)),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EINVAL && op == dmi::DM_DEV_RENAME_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EINVAL && op == DmIoctlCmd::DM_DEV_RENAME
     );
 
     dm.device_remove(&DevId::Name(&name), DmFlags::default())
@@ -118,7 +117,7 @@ fn sudo_test_rename_uuid_id() {
         .unwrap();
     assert_matches!(
         dm.device_rename(&name, &DevId::Uuid(&uuid)),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == dmi::DM_DEV_RENAME_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == DmIoctlCmd::DM_DEV_RENAME
     );
 
     dm.device_remove(&DevId::Name(&name), DmFlags::default())
@@ -155,7 +154,7 @@ fn sudo_test_rename_id() {
 
     assert_matches!(
         dm.device_rename(&name, &DevId::Name(&name)),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == dmi::DM_DEV_RENAME_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == DmIoctlCmd::DM_DEV_RENAME
     );
 
     dm.device_remove(&DevId::Name(&name), DmFlags::default())
@@ -196,7 +195,7 @@ fn sudo_test_rename() {
 
     assert_matches!(
         dm.device_rename(&new_name, &DevId::Name(&third_name)),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == dmi::DM_DEV_RENAME_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == DmIoctlCmd::DM_DEV_RENAME
     );
 
     dm.device_remove(&DevId::Name(&third_name), DmFlags::default())
@@ -214,7 +213,7 @@ fn sudo_test_rename_non_existent() {
             &test_name("old_name").expect("is valid DM name"),
             &DevId::Name(&new_name)
         ),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::ENXIO && op == dmi::DM_DEV_RENAME_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::ENXIO && op == DmIoctlCmd::DM_DEV_RENAME
     );
 }
 
@@ -226,7 +225,7 @@ fn sudo_test_remove_non_existent() {
             &DevId::Name(&test_name("junk").expect("is valid DM name")),
             DmFlags::default()
         ),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::ENXIO && op == dmi::DM_DEV_REMOVE_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::ENXIO && op == DmIoctlCmd::DM_DEV_REMOVE
     );
 }
 
@@ -298,7 +297,7 @@ fn sudo_status_no_name() {
     let name = test_name("example_dev").expect("is valid DM name");
     assert_matches!(
         DM::new().unwrap().device_info(&DevId::Name(&name)),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::ENXIO && op == dmi::DM_DEV_STATUS_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::ENXIO && op == DmIoctlCmd::DM_DEV_STATUS
     );
 }
 
@@ -317,19 +316,19 @@ fn sudo_test_double_creation() {
         .unwrap();
     assert_matches!(
         dm.device_create(&name, Some(&uuid), DmFlags::default()),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == dmi::DM_DEV_CREATE_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == DmIoctlCmd::DM_DEV_CREATE
     );
     assert_matches!(
         dm.device_create(&name, None, DmFlags::default()),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == dmi::DM_DEV_CREATE_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == DmIoctlCmd::DM_DEV_CREATE
     );
     assert_matches!(
         dm.device_create(&name, Some(&uuid_alt), DmFlags::default()),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == dmi::DM_DEV_CREATE_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == DmIoctlCmd::DM_DEV_CREATE
     );
     assert_matches!(
         dm.device_create(&name_alt, Some(&uuid), DmFlags::default()),
-        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == dmi::DM_DEV_CREATE_CMD
+        Err(DmError::Ioctl(op, _, _, err)) if err == nix::errno::Errno::EBUSY && op == DmIoctlCmd::DM_DEV_CREATE
     );
     dm.device_remove(&DevId::Name(&name), DmFlags::default())
         .unwrap();
